--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-<div class="container">
+<div class="conEle">
     <link rel="stylesheet" href="styles.css" />
     <header>
-      <div class="contrast">100%</div>
-      <div class="score">0</div>
+      <div class="opacity">100%</div>
+      <div class="points">0</div>
     </header>
-    <div class="grid"></div>
-    <footer>Press an arrow key or space to start!
-      <div>Ready for hard more? Press H
+    <div class="box"></div>
+    <footer>Press any navigational keys to start!
+      <div>If you want to up the difficulty, Press H.
     </footer>
   </div>
   <script src="game.js"></script>
   
-  <a id="youtube" href="https://youtu.be/TAmYp4jKWoM" target="_top">
-    <span>See how this game was made</span>
-  </a>
-  <div id="youtube-card">
-    How to create a snake game with JavaScript
-  </div>
